--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--suppress AndroidDomInspection -->
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:supportsRtl="true"
+        android:label="Студенческий календарь"
+        android:hardwareAccelerated="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
 
         <activity
             android:name="com.example.studenteventsapp.MainActivity"
@@ -15,10 +21,11 @@
         </activity>
 
         <activity android:name="com.example.studenteventsapp.InterestActivity" />
-        <activity android:name="com.example.studenteventsapp.EventActivity"
-            android:label="EventActivity"/>
+        <activity android:name="com.example.studenteventsapp.ActivityEvent"
+            android:label="ActivityEvent"/>
 
     </application>
+
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
